Fix layout on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ em {
 :root {
     /* taken from https://css-tricks.com/snippets/css/system-font-stack/ */
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, 	Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-    font-size: 16pt;
+    font-size: 14pt;
     line-height: 1.2em;
     color: #fff;
     background-color: #333;
@@ -37,7 +37,17 @@ em {
 
 .container {
     display: flex;
-    min-height: 100vh;
     align-items: center;
     justify-content: center;
+    padding-top: 2em;
+}
+
+@media screen and (min-width: 1024px) {
+    :root {
+        font-size: 16pt;
+    }
+    .container {
+        padding-top: 0;
+        min-height: 100vh;
+    }
 }
